# PIC-FPGA

./: .env  .gitignore  .gitmodules  ALU.vhd  CMakeLists.txt  Input.txt  Makefile.am  PIC16F84A.qsf  PIC16F84A.sdc  PIC16F84A.vhd  PIC16F84A_tb.vhd  PIC_package.vhd  README.md  W_register.vhd  alu_input_mux.vhd  alu_output_demux.vhd  compile_fpga_design.ps1  configure.ac  fpga_tool.ps1  gpio_program.c  info.txt  input_receive.vhd  install_cpputest.ps1  install_cpputest.sh  makefile  parallel_to_serial_output.vhd  parallel_to_serial_wreg.vhd  program_fpga.ps1  ram.vhd  real_hw_tb_input.txt  real_hw_tb_reference.txt  requirements.txt  run_tests.sh  run_vhdl_tb.ps1  serial_to_parallel.vhd  serial_to_parallel_instruction.vhd  serial_to_parallel_literal.vhd  serial_to_parallel_opcode.vhdl  setup_env.sh  setup_py_env.sh  (+12 more)
arduino_code/: arduino_code.ino
hw/: run.py
hw/src/: clk_div.vhd  i2c.vhd  makefile  pcf8582_simulator.vhd  pic16f84a.qsf  pic16f84a.sdc  pic16f84a.vhd
hw/style_check/: vsg_config.json
hw/testbench/: pic16f84a_tb.vhd
hw/testbench/E2E/: pic16f84a_tb.vhd  vsim_commands.txt
hw/testbench/component/: tb_alu.vhd  tb_alu_input_mux.vhd  tb_alu_output_demux.vhd  tb_hps_adder.vhd  tb_input_receive.vhd  tb_parallel_to_serial_output.vhd  tb_serial_to_parallel_instruction.vhd  tb_w_register.vhd
src/: CMakeLists.txt  Makefile.am  PIC16F84A.c  app.c  arduino.c  arduino.h  code.c  code.h  common_data.c  common_data.h  defines.h  fpga_if.c  fpga_if.h  functions.c  functions.h  gpio_program.c  gpio_program.h  gpio_setup.c  gpio_setup.h  hw_if.c  hw_if.h  main.c  makefile  process_command.c  process_command.h  types.h
src/arduino/: arduino.ino
src/arduino_code/: arduino_code.ino
src/de10_nano/adder/: makefile
src/de10_nano/adder/module/: Makefile  adder_driver.c
src/de10_nano/first_test/: makefile
src/hps/: Makefile  main.c  makefile
src/hps/testing/: Makefile  hps_driver.c
src/mocks/: mock_fcntl.cpp  mock_gpio.cpp  mock_hw_if.cpp  mock_mman.cpp  mock_mman.h  mock_wiringPi.cpp  mock_wiringSerial.cpp  wiringPi.c  wiringPi.h  wiringSerial.c  wiringSerial.c~  wiringSerial.h
src/raspberry_pi/: app.c  common_data.c  common_data.h  gpio_setup.c  hw_if.c  hw_if.h  makefile  process_command.c  process_command.h
src/raspberry_pi/mocks/: mock_fcntl.cpp  mock_fcntl.h  mock_gpio.cpp  mock_hw_if.cpp  mock_mman.cpp  mock_wiringPi.cpp  mock_wiringSerial.cpp  wiringPi.cpp  wiringSerial.cpp  wiringSerial.h
sw/: install_cpputest.sh
sw/src/de10_nano/adder/: main.c  makefile
sw/src/de10_nano/adder/module/: Makefile
sw/src/de10_nano/first_test/: main.c
sw/src/raspberry_pi/: app.c  common_data.c  common_data.h  defines.h  gpio_setup.c  hw_if.c  hw_if.h  makefile  process_command.c  process_command.h
sw/src/raspberry_pi/mocks/: mock_fcntl.cpp  mock_gpio.cpp  mock_gpio.h  mock_hw_if.cpp  mock_mman.cpp  mock_wiringPi.cpp  mock_wiringSerial.cpp
sw/ut/: install_cpputest.sh  main.cpp  makefile  test_common_data.cpp  test_gpio_setup.cpp  test_hw_if.cpp  test_process_command.cpp
test/: MakefileWorker.mk  basic_test.cpp  main.cpp  makefile  test_common_data.cpp  test_gpio_setup.cpp  test_hw_if.cpp  test_process_command.cpp
test_data/: real_hw_tb_input.txt  real_hw_tb_reference.txt  tb_input.txt  tb_input_parser.py  tb_reference.txt  test_tb_input_parser.py  test_verify_simulation_result.py  verify_real_hw_result.py  verify_simulation_result.py
test_data/data/: real_hw_tb_input.txt  tb_reference.txt  test_file.txt
test_data/scripts/: verify_real_hw_result.py  verify_simulation_result.py
test_data/scripts/ut/: test_tb_input_parser.py  test_verify_simulation_result.py
vhdl_src/: ALU.vhd  PIC16F84A.qpf  PIC16F84A.qsf  PIC16F84A.sdc  PIC16F84A.vhd  PIC16F84A_tb.vhd  W_register.vhd  adder_ctrl_hw.tcl  alu.vhd  alu_input_mux.vhd  alu_output_demux.vhd  clk_div.vhd  constants_package.vhd  fpga_tool.ps1  hps_adder.vhd  hps_adder_qsys.qsys  i2c.vhd  input_receive.vhd  makefile  parallel_to_serial_output.vhd  pcf8582_simulator.vhd  pic16f84a.qpf  pic16f84a.qsf  pic16f84a.vhd  pic16f84a_tb.vhd  ram.vhd  serial_to_parallel_instruction.vhd  state_machine.vhd  states_package.vhd  timer.vhd  vsg_config.json  w_register.vhd
