add_executable(main app.c common_data.c gpio_setup.c hw_if.c process_command.c)

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -O3")
find_library(PTHREAD_LIB pthread)
if(PTHREAD_LIB)
    message(STATUS "libpthread was found")
    target_link_libraries(main PUBLIC ${PTHREAD_LIB})
else()
    message(FATAL_ERROR "libpthread was not found")
endif()

find_library(MATH_LIB m)
if(MATH_LIB)
    message(STATUS "libm was found")
    target_link_libraries(main PUBLIC ${MATH_LIB})
else()
    message(FATAL_ERROR "libm was not found")
endif()

find_library(WIRINGPI_LIB wiringPi)
if(WIRINGPI_LIB)
    message(STATUS "libwiringPi was found")
    target_link_libraries(main PUBLIC ${WIRINGPI_LIB})
else()
    message(FATAL_ERROR "libwiringPi was not found")
endif()
